Atualização com as imagens e o novo dropdown de towncity

--- a/site/Street-Rua-SITE.html
+++ b/site/Street-Rua-SITE.html
@@ -30,7 +30,7 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="carousel.css" rel="stylesheet">
+    <link href="RageGames.css" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -44,8 +44,13 @@
         <li class="nav-item active">
           <a class="nav-link" href="Street-Rua-SITE.html">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Towncity.html">Towncity</a>
+		<li class="nav-item dropdown">
+		  <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Towncity</a>
+		  <div class="dropdown-menu" aria-labelledby="dropdown01">
+            <a class="dropdown-item" href="#">História</a>
+            <a class="dropdown-item" href="#">Personagens</a>
+            <a class="dropdown-item" href="#">Futuro</a>
+          </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="formulario-street-rua.html" >Beta</a>
@@ -69,8 +74,8 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#100"/></svg>
-        <div class="container">
+        <img src="../imagens/Dogmalia.png" class="img-fluid" width="1000" height="2000">
+		<div class="container">
           <div class="carousel-caption text-left">
             <h1>Estudio Rage Games</h1>
             <p>Estudio Rage Games lança seu primeiro jogo, Street Rua</p>
@@ -78,7 +83,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#100"/></svg>
+                <img src="../imagens/Dogmalia.png" class="img-fluid" width="500" height="500">
         <div class="container">
           <div class="carousel-caption">
             <h1>Street Rua</h1>
@@ -88,7 +93,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#100"/></svg>
+        <img src="../imagens/Dogmalia.png" class="img-fluid" width="500" height="500">
         <div class="container">
           <div class="carousel-caption text-right">
             <h1>Beta Fechado!</h1>
@@ -128,8 +133,8 @@
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-      </div>
+        <img src="../imagens/Dogmalia.png" class="img-fluid" width="500" height="500">
+		</div>
     </div>
 
     <hr class="featurette-divider">
@@ -140,8 +145,8 @@
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-      </div>
+        <img src="../imagens/Dogmalia.png" class="img-fluid" width="500" height="500">
+		</div>
     </div>
 
     <hr class="featurette-divider">
@@ -152,45 +157,64 @@
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-      </div>
+        <img src="../imagens/Dogmalia.png" class="img-fluid" width="500" height="500">
+		</div>
     </div>
+	
 
+	
     <hr class="featurette-divider">
+	<main role="main" class="container">
+		<div class="jumbotron">
+			<h1><center>Quem somos?</center></h1>
+		</div>
+	</main><br/>
 
     <!-- /END THE FEATURETTES -->
 	    <!-- Three columns of text below the carousel -->
     <div class="row">
+
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-        <h2>Heading</h2>
+        <img src="../imagens/Dogmalia.png" class="img-fluid rounded-circle" width="200" height="200">
+		<h2>Antonio Nildo</h2>
         <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-        <h2>Heading</h2>
-        <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+        <img src="../imagens/Dogmalia.png" class="img-fluid rounded-circle" width="200" height="200">
+		<h2>Bruno Lucino</h2>
+        <p>Do time de Dev do Estudio, trabalhou para realizar a implementação do site, entre outras coisas.</p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-        <h2>Heading</h2>
+        <img src="../imagens/Dogmalia.png" class="img-fluid rounded-circle" width="200" height="200">
+		<h2>Leandro Rodrigues</h2>
         <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
       </div><!-- /.col-lg-4 -->
 	  <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-        <h2>Heading</h2>
+        <img src="../imagens/Dogmalia.png" class="img-fluid rounded-circle" width="200" height="200">
+		<h2>Maycon Almeida</h2>
         <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
       </div><!-- /.col-lg-4 -->
 	  <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-        <h2>Heading</h2>
+        <img src="../imagens/Dogmalia.png" class="img-fluid rounded-circle" width="200" height="200">
+		<h2>Pedro Cazzarotti</h2>
         <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
       </div><!-- /.col-lg-4 -->
 	  <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-        <h2>Heading</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+		<img src="../imagens/Dogmalia.png" class="img-fluid rounded-circle" width="200" height="200"> 
+        <h2>Dogmalia</h2>
+        <p>O primeiro projeto do Estudio está disponível para download no itch.io, clique no botão abaixo para acessa-lo.</p>
+        <p><a class="btn btn-secondary" href="https://pedrocazzarotti.itch.io/dogmalia" role="button">Acessar &raquo;</a></p>
+      </div><!-- /.col-lg-4 -->
+	  <div class="col-lg-4">
+        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"></svg>
+        <h2></h2>
+        <p></p>
+      </div><!-- /.col-lg-4 -->
+	  <div class="col-lg-4">
+        <img src="../imagens/Zombie-Hunter.png" class="img-fluid rounded-circle" width="200" height="200">
+		<h2>Zombie Hunter</h2>
+        <p>Também pode jogar esse incrível jogo de zumbi, projetado pelo nosso Dev Maycon Almeida.</p>
+        <p><a class="btn btn-secondary" href="https://mayconalmeida.itch.io/zombie-hunter-until-the-last-soul" role="button">Acessar &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
