--- a/site/formulario-street-rua.html
+++ b/site/formulario-street-rua.html
@@ -60,7 +60,7 @@
 </header><br/>
     <div class="container">
   <div class="py-5 text-center">
-    <img class="d-block mx-auto mb-4" href="Street-Rua-SITE.html" src="../assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+    <img class="d-block mx-auto mb-4" href="Street-Rua-SITE.html" src="../imagens/Dogmalia.png" alt="" width="72" height="72">
     <h2>BETA Fechado</h2>
     <p class="lead">Preencha o Formulário abaixo para se inscrever no nosso BETA Fechado, entraremos em contato por e-mail com as informações para adquirir o jogo caso tenha saido selecionado!</p>
   </div>
