Alterado css dos items de jogo

--- a/site/Street-Rua-SITE.html
+++ b/site/Street-Rua-SITE.html
@@ -189,28 +189,30 @@
 		<h2>Leandro Rodrigues</h2>
         <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
       </div><!-- /.col-lg-4 -->
-	  <div class="col-lg-4">
+	  <div class="col-lg-4 dev-item">
         <img src="../imagens/Dogmalia.png" class="img-fluid rounded-circle" width="200" height="200">
 		<h2>Maycon Almeida</h2>
         <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
       </div><!-- /.col-lg-4 -->
-	  <div class="col-lg-4">
+	  <div class="col-lg-4 dev-item">
         <img src="../imagens/Dogmalia.png" class="img-fluid rounded-circle" width="200" height="200">
 		<h2>Pedro Cazzarotti</h2>
         <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
       </div><!-- /.col-lg-4 -->
-	  <div class="col-lg-4">
+	<main role="main" class="container">
+		<div class="jumbotron">
+			<h1><center>Nossos Jogos</center></h1>
+		</div>
+	</main><br/>
+	
+	  <div class="col-lg-4 game-item">
 		<img src="../imagens/Dogmalia.png" class="img-fluid rounded-circle" width="200" height="200"> 
         <h2>Dogmalia</h2>
         <p>O primeiro projeto do Estudio está disponível para download no itch.io, clique no botão abaixo para acessa-lo.</p>
         <p><a class="btn btn-secondary" href="https://pedrocazzarotti.itch.io/dogmalia" role="button">Acessar &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
-	  <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"></svg>
-        <h2></h2>
-        <p></p>
-      </div><!-- /.col-lg-4 -->
-	  <div class="col-lg-4">
+
+	  <div class="col-lg-4 game-item">
         <img src="../imagens/Zombie-Hunter.png" class="img-fluid rounded-circle" width="200" height="200">
 		<h2>Zombie Hunter</h2>
         <p>Também pode jogar esse incrível jogo de zumbi, projetado pelo nosso Dev Maycon Almeida.</p>
