--- a/site/Towncity.html
+++ b/site/Towncity.html
@@ -29,6 +29,8 @@
         }
       }
     </style>
+	    <!-- Custom styles for this template -->
+    <link href="RageGames.css" rel="stylesheet">
   </head>
   <body>
     <header>
