Adicionado modelo para páginas de Towncity e unifiquei os links para acessar as páginas no menu superior, agora é possível clicar e acessar todas sem erro

--- a/site/Street-Rua-SITE.html
+++ b/site/Street-Rua-SITE.html
@@ -47,9 +47,9 @@
 		<li class="nav-item dropdown">
 		  <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Towncity</a>
 		  <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="#">História</a>
-            <a class="dropdown-item" href="#">Personagens</a>
-            <a class="dropdown-item" href="#">Futuro</a>
+            <a class="dropdown-item" href="Towncity-História.html">História</a>
+            <a class="dropdown-item" href="Towncity-Personagens.html">Personagens</a>
+            <a class="dropdown-item" href="Towncity-Futuro.html">Futuro</a>
           </div>
         </li>
         <li class="nav-item">
