--- a/site/formulario-street-rua.html
+++ b/site/formulario-street-rua.html
@@ -30,10 +30,10 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="form-validation.css" rel="stylesheet">
+    <link href="RageGames.css" rel="stylesheet">
   </head>
   <body class="bg-light">
-      <header>
+    <header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <a class="navbar-brand" href="Street-Rua-SITE.html">Street Rua</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,8 +44,13 @@
         <li class="nav-item active">
           <a class="nav-link" href="Street-Rua-SITE.html">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Towncity.html">Towncity</a>
+		<li class="nav-item dropdown">
+		  <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Towncity</a>
+		  <div class="dropdown-menu" aria-labelledby="dropdown01">
+            <a class="dropdown-item" href="Towncity-História.html">História</a>
+            <a class="dropdown-item" href="Towncity-Personagens.html">Personagens</a>
+            <a class="dropdown-item" href="Towncity-Futuro.html">Futuro</a>
+          </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="formulario-street-rua.html" >Beta</a>
