--- a/site/Street-Rua-SITE.html
+++ b/site/Street-Rua-SITE.html
@@ -74,7 +74,7 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="../imagens/Dogmalia.png" class="img-fluid" width="1000" height="2000">
+        <img src="../imagens/rage_games_carrosel.png" class="img-fluid" width="1000" height="2000">
 		<div class="container">
           <div class="carousel-caption text-left">
             <h1>Estudio Rage Games</h1>
@@ -83,7 +83,7 @@
         </div>
       </div>
       <div class="carousel-item">
-                <img src="../imagens/Dogmalia.png" class="img-fluid" width="500" height="500">
+                <img src="../imagens/cena_de_luta_carrosel.png" class="img-fluid" width="500" height="500">
         <div class="container">
           <div class="carousel-caption">
             <h1>Street Rua</h1>
@@ -129,11 +129,11 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <h2 class="featurette-heading">JOGUE STREET RUA <span class="text-muted" ><a href="formulario-street-rua.html" class="text-muted">Cadastre-se para o BETA </a> Disponivel para PC</span></h2>
+        <p class="lead">Jogo de Luta Multiplayer com mecânicas divertidas e muitos personagens divertidos. Street RUA é um jogo com gráficos 2d e gameplay clássica <i>Beat 'em up</i>, com batalhas emocionantes, traga seus amigos e prove quem é o Melhor!</p>
       </div>
       <div class="col-md-5">
-        <img src="../imagens/Dogmalia.png" class="img-fluid" width="500" height="500">
+        <img src="../imagens/cena_de_luta.png" class="img-fluid" width="500" height="500">
 		</div>
     </div>
 
@@ -175,29 +175,29 @@
     <div class="row">
 
       <div class="col-lg-4">
-        <img src="../imagens/Dogmalia.png" class="img-fluid rounded-circle" width="200" height="200">
+        <img src="../imagens/nildo.png" class="img-fluid rounded-circle" width="200" height="200">
 		<h2>Antonio Nildo</h2>
-        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+        <p>Do time de Arte e web, fez parte do desenvolvimento do site, das artes e do design do jogos Dogmalia e Street RUA. Fã de league of legends,Mobile legends, RPGs e basquete.</p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="../imagens/Dogmalia.png" class="img-fluid rounded-circle" width="200" height="200">
+        <img src="../imagens/bruno.png" class="img-fluid rounded-circle" width="200" height="200">
 		<h2>Bruno Lucino</h2>
         <p>Do time de Dev do Estudio, trabalhou para realizar a implementação do site, entre outras coisas.</p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="../imagens/Dogmalia.png" class="img-fluid rounded-circle" width="200" height="200">
+        <img src="../imagens/leandro.png" class="img-fluid rounded-circle" width="200" height="200">
 		<h2>Leandro Rodrigues</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <p>Generalista e Grande apreciador de piadas ruins e amante de JRPG</p>
       </div><!-- /.col-lg-4 -->
 	  <div class="col-lg-4 dev-item">
-        <img src="../imagens/Dogmalia.png" class="img-fluid rounded-circle" width="200" height="200">
+        <img src="../imagens/maycon.png" class="img-fluid rounded-circle" width="200" height="200">
 		<h2>Maycon Almeida</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <p>Programador/Game Designer e Fã de jogos de luta e Ação.</p>
       </div><!-- /.col-lg-4 -->
 	  <div class="col-lg-4 dev-item">
-        <img src="../imagens/Dogmalia.png" class="img-fluid rounded-circle" width="200" height="200">
+        <img src="../imagens/pedro.png" class="img-fluid rounded-circle" width="200" height="200">
 		<h2>Pedro Cazzarotti</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <p>Aspirante a programador e game design e Fã de tudo que é retrô</p>
       </div><!-- /.col-lg-4 -->
 	<main role="main" class="container">
 		<div class="jumbotron">
