Mudanças no padrão para as sub-abas de Towncity, campos de midias sociais adicionados para cada um

--- a/site/Street-Rua-SITE.html
+++ b/site/Street-Rua-SITE.html
@@ -113,17 +113,7 @@
     </a>
   </div>
 
-
-  <!-- Marketing messaging and featurettes
-  ================================================== -->
-  <!-- Wrap the rest of the page in another container to center all the content. -->
-
   <div class="container marketing">
-
-
-
-
-    <!-- START THE FEATURETTES -->
 
     <hr class="featurette-divider">
 
@@ -141,8 +131,8 @@
 
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <h2 class="featurette-heading">Towncity <span class="text-muted"></h2>
+        <p class="lead">Na cidade de Towncity uma fábrica é responsável pela poluição desenfreada que está causando mudanças climáticas irreversíveis. Devido a estas mudanças, a população começou a criar comportamentos agressivos que dividiu a cidade em dois grupos: Os que defendem a fábrica e os que são contra ela. A cidade está sitiada e brigas ocorrem por toda área, venha defender o lado que acredite ser o melhor!</p>
       </div>
       <div class="col-md-5 order-md-1">
         <img src="../imagens/Dogmalia.png" class="img-fluid" width="500" height="500">
@@ -170,35 +160,48 @@
 		</div>
 	</main><br/>
 
-    <!-- /END THE FEATURETTES -->
-	    <!-- Three columns of text below the carousel -->
     <div class="row">
 
       <div class="col-lg-4">
         <img src="../imagens/nildo.png" class="img-fluid rounded-circle" width="200" height="200">
 		<h2>Antonio Nildo</h2>
-        <p>Do time de Arte e web, fez parte do desenvolvimento do site, das artes e do design do jogos Dogmalia e Street RUA. Fã de league of legends,Mobile legends, RPGs e basquete.</p>
+        <p>Do time de Arte e web, fez parte do desenvolvimento do site, das artes e do design do jogos Dogmalia e Street RUA. Fã de league of legends, Mobile legends, RPGs e basquete.</p>
+		<a href="https://www.linkedin.com/in/nildotoni/"style="margin-right:15px"><img src="../imagens/png-transparent-logo-linkedin.png" class="img-fluid rounded-circle" width="30" height="30"></a>
+		<a href="https://github.com/nildotoni"style="margin-right:15px"><img src="../imagens/png-transparent-logo-github.png" class="img-fluid rounded-circle" width="30" height="30"></a>
+		<a href="https://www.instagram.com/nilderas/" style="margin-right:15px"><img src="../imagens/png-transparent-logo-instagram.png" class="img-fluid rounded-circle" width="30" height="30"></a>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="../imagens/bruno.png" class="img-fluid rounded-circle" width="200" height="200">
 		<h2>Bruno Lucino</h2>
         <p>Do time de Dev do Estudio, trabalhou para realizar a implementação do site, entre outras coisas.</p>
-      </div><!-- /.col-lg-4 -->
+        <a href="https://www.linkedin.com/in/bruno-lucino-19a16614a/"style="margin-right:15px"><img src="../imagens/png-transparent-logo-linkedin.png" class="img-fluid rounded-circle" width="30" height="30"></a>
+		<a href="https://github.com/TrolandoOficial"style="margin-right:15px"><img src="../imagens/png-transparent-logo-github.png" class="img-fluid rounded-circle" width="30" height="30"></a>
+		<a href="https://www.instagram.com/brunolucino/" style="margin-right:15px"><img src="../imagens/png-transparent-logo-instagram.png" class="img-fluid rounded-circle" width="30" height="30"></a>
+	  </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="../imagens/leandro.png" class="img-fluid rounded-circle" width="200" height="200">
 		<h2>Leandro Rodrigues</h2>
         <p>Generalista e Grande apreciador de piadas ruins e amante de JRPG</p>
+		<a href="https://www.linkedin.com/in/leandro-dos-santos-rodrigues-69146232/"style="margin-right:15px"><img src="../imagens/png-transparent-logo-linkedin.png" class="img-fluid rounded-circle" width="30" height="30"></a>
+		<a href="https://github.com/Lrds91"style="margin-right:15px"><img src="../imagens/png-transparent-logo-github.png" class="img-fluid rounded-circle" width="30" height="30"></a>
+		<a href="https://www.instagram.com/lrds_/" style="margin-right:15px"><img src="../imagens/png-transparent-logo-instagram.png" class="img-fluid rounded-circle" width="30" height="30"></a>
       </div><!-- /.col-lg-4 -->
 	  <div class="col-lg-4 dev-item">
         <img src="../imagens/maycon.png" class="img-fluid rounded-circle" width="200" height="200">
 		<h2>Maycon Almeida</h2>
         <p>Programador/Game Designer e Fã de jogos de luta e Ação.</p>
+		<a href="https://www.linkedin.com/in/nildotoni/"style="margin-right:15px"><img src="../imagens/png-transparent-logo-linkedin.png" class="img-fluid rounded-circle" width="30" height="30"></a>
+		<a href="https://github.com/PedroCazzarotti"style="margin-right:15px"><img src="../imagens/png-transparent-logo-github.png" class="img-fluid rounded-circle" width="30" height="30"></a>
+		<a href="https://www.instagram.com/pedrocazzarotti/" style="margin-right:15px"><img src="../imagens/png-transparent-logo-instagram.png" class="img-fluid rounded-circle" width="30" height="30"></a>
       </div><!-- /.col-lg-4 -->
 	  <div class="col-lg-4 dev-item">
         <img src="../imagens/pedro.png" class="img-fluid rounded-circle" width="200" height="200">
 		<h2>Pedro Cazzarotti</h2>
         <p>Aspirante a programador e game design e Fã de tudo que é retrô</p>
-      </div><!-- /.col-lg-4 -->
+		<a href="https://www.linkedin.com/mwlite/in/pedro-henrique-cazzarotti-151988171"style="margin-right:15px"><img src="../imagens/png-transparent-logo-linkedin.png" class="img-fluid rounded-circle" width="30" height="30"></a>
+		<a href="https://github.com/PedroCazzarotti"style="margin-right:15px"><img src="../imagens/png-transparent-logo-github.png" class="img-fluid rounded-circle" width="30" height="30"></a>
+		<a href="https://www.instagram.com/pedrocazzarotti/" style="margin-right:15px"><img src="../imagens/png-transparent-logo-instagram.png" class="img-fluid rounded-circle" width="30" height="30"></a>
+		</div><!-- /.col-lg-4 -->
 	<main role="main" class="container">
 		<div class="jumbotron">
 			<h1><center>Nossos Jogos</center></h1>
