--- a/site/Towncity-Futuro.html
+++ b/site/Towncity-Futuro.html
@@ -65,39 +65,28 @@
 
 <main role="main">
 
-  <!-- Main jumbotron for a primary marketing message or call to action -->
-  <div class="jumbotron">
-    <div class="container">
-      <h1 class="display-3">Hello, world!</h1>
-      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
-    </div>
-  </div>
+  <div class="container">
+    <img src="../imagens/mortal-kombat-curiosidades.png" class="img-fluid" width="100%" height="100%"><br/>
+    </br><p class="lead">ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! ESCREVER AQUI UM POUCO SOBRE A DISPUTA ENTRE TRAVIS E JAIRO E O QUE ELES BUSCAM PARA A CIDADE! </p>
+  </div><br/>
+
 
   <div class="container">
     <!-- Example row of columns -->
     <div class="row">
-      <div class="col-md-4">
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+      <div class="col-lg-4 dev-item">
+        <h2>História</h2>
+        <p>Conheça a história de Towncity! </p>
+        <p><a class="btn btn-secondary" href="Towncity-História.html" role="button">Conheça mais &raquo;</a></p>
       </div>
-      <div class="col-md-4">
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+      <div class="col-lg-4 dev-item">
+        <h2>Futuro</h2>
+        <p>Travis ou Jairo, quem defenderá? </p>
+        <p><a class="btn btn-secondary" href="Towncity-Futuro.html" role="button">Escolha &raquo;</a></p>
       </div>
-      <div class="col-md-4">
-        <h2>Heading</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-      </div>
-    </div>
-
     <hr>
-
   </div> <!-- /container -->
-
+  <br/>
 </main>
 
     <footer class="container">
