alteração de conteúdo

--- a/site/Street-Rua-SITE.html
+++ b/site/Street-Rua-SITE.html
@@ -93,7 +93,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="../imagens/Dogmalia.png" class="img-fluid" width="500" height="500">
+        <img src="../imagens/Streetrua.jpg" class="img-fluid" width="500" height="500">
         <div class="container">
           <div class="carousel-caption text-right">
             <h1>Beta Fechado!</h1>
@@ -135,7 +135,7 @@
         <p class="lead">Na cidade de Towncity uma fábrica é responsável pela poluição desenfreada que está causando mudanças climáticas irreversíveis. Devido a estas mudanças, a população começou a criar comportamentos agressivos que dividiu a cidade em dois grupos: Os que defendem a fábrica e os que são contra ela. A cidade está sitiada e brigas ocorrem por toda área, venha defender o lado que acredite ser o melhor!</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img src="../imagens/Dogmalia.png" class="img-fluid" width="500" height="500">
+        <img src="../imagens/town.jpg" class="img-fluid" width="500" height="500">
 		</div>
     </div>
 
@@ -143,15 +143,22 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <h2 class="featurette-heading">Mecânicas e Gameplay <span class="text-muted">Divertidas.</span></h2>
+        <p class="lead">Ao combinar estilos de jogos chegamos a uma gameplay totalmente divertida, com mecânicas dinâmicas e um alto potêncial de diversão e competição entre você e seus amigos.</p>
       </div>
       <div class="col-md-5">
-        <img src="../imagens/Dogmalia.png" class="img-fluid" width="500" height="500">
+        <img src="../imagens/scene.jpg" class="img-fluid" width="500" height="500">
 		</div>
     </div>
-	
-
+	   <hr class="featurette-divider">
+	<main role="main" class="container">
+		<div class="jumbotron">
+			<h1><center>Teste de Gameplay</center></h1>
+		</div>
+	</main><br/>
+<div class="embed-responsive embed-responsive-16by9" >
+  <iframe class="embed-responsive-item" src="..\imagens\streetrua_dev1.mp4"></iframe>
+</div>
 	
     <hr class="featurette-divider">
 	<main role="main" class="container">
