--- a/site/Towncity-História.html
+++ b/site/Towncity-História.html
@@ -66,7 +66,7 @@
 <main role="main">
 
   <div class="container">
-    <img src="../imagens/rage_games_carrosel.png" class="img-fluid" width="100%" height="100%"><br/>
+    <img src="../imagens/Streetrua.jpg" class="img-fluid" width="100%" height="100%"><br/>
     </br><p class="lead">No ano 2020, a humanidade se prepara para entrar na era da inteligência artificial, os avanços da tecnologia foram gigantescos. Contudo, o uso fora de controle de combustíveis fósseis e a poluição gerada por uma população de bilhões de pessoas tem seu preço.</p>
 
 	<p class="lead">A cidade de Towncity sofre com essa poluição. Constantemente sobrecarregada pelo despejo da sua principal fábrica, o clima da cidade entrou em colapso. </p>
