--- a/site/Street-Rua-SITE.html
+++ b/site/Street-Rua-SITE.html
@@ -197,9 +197,9 @@
         <img src="../imagens/maycon.png" class="img-fluid rounded-circle" width="200" height="200">
 		<h2>Maycon Almeida</h2>
         <p>Programador/Game Designer e Fã de jogos de luta e Ação.</p>
-		<a href="https://www.linkedin.com/in/nildotoni/"style="margin-right:15px"><img src="../imagens/png-transparent-logo-linkedin.png" class="img-fluid rounded-circle" width="30" height="30"></a>
-		<a href="https://github.com/PedroCazzarotti"style="margin-right:15px"><img src="../imagens/png-transparent-logo-github.png" class="img-fluid rounded-circle" width="30" height="30"></a>
-		<a href="https://www.instagram.com/pedrocazzarotti/" style="margin-right:15px"><img src="../imagens/png-transparent-logo-instagram.png" class="img-fluid rounded-circle" width="30" height="30"></a>
+		<a href="https://www.linkedin.com/in/maycon-alves-de-almeida-9a089b161"style="margin-right:15px"><img src="../imagens/png-transparent-logo-linkedin.png" class="img-fluid rounded-circle" width="30" height="30"></a>
+		<a href="https://github.com/MayconAlvesdeAlmeida"style="margin-right:15px"><img src="../imagens/png-transparent-logo-github.png" class="img-fluid rounded-circle" width="30" height="30"></a>
+		<a href="https://www.youtube.com/channel/UCE27YuhnS8mfguvX1mr8Ksw" style="margin-right:15px"><img src="../imagens/png-transparent-logo-instagram.png" class="img-fluid rounded-circle" width="30" height="30"></a>
       </div><!-- /.col-lg-4 -->
 	  <div class="col-lg-4 dev-item">
         <img src="../imagens/pedro.png" class="img-fluid rounded-circle" width="200" height="200">
