--- a/site/Street-Rua-SITE.html
+++ b/site/Street-Rua-SITE.html
@@ -53,7 +53,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="formulario-street-rua.html" >Beta</a>
+          <a class="nav-link" href="formulario-street-rua.php" >Beta</a>
         </li>
       </ul>
       <form class="form-inline mt-2 mt-md-0">
