--- a/site/Towncity-Futuro.html
+++ b/site/Towncity-Futuro.html
@@ -52,7 +52,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="formulario-street-rua.html" >Beta</a>
+          <a class="nav-link" href="formulario-street-rua.php" >Beta</a>
         </li>
       </ul>
       <form class="form-inline mt-2 mt-md-0">
