--- a/site/Street-Rua-SITE.html
+++ b/site/Street-Rua-SITE.html
@@ -53,7 +53,10 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="formulario-street-rua.php" >Beta</a>
+          <a class="nav-link" href="../php/formulario-street-rua.php" >Beta</a>
+        </li>
+		<li class="nav-item">
+          <a class="nav-link" href="../php/Login.php" >Login</a>
         </li>
       </ul>
       <form class="form-inline mt-2 mt-md-0">
