--- a/site/Towncity-Futuro.html
+++ b/site/Towncity-Futuro.html
@@ -54,9 +54,17 @@
         <li class="nav-item">
           <a class="nav-link" href="../php/formulario-street-rua.php" >Beta</a>
         </li>
-		<li class="nav-item">
-          <a class="nav-link" href="../php/Login.php" >Login</a>
-        </li>
+		<?php
+			if(isset($_SESSION["codigo"])== true){
+				echo "<li class='nav-item'>
+				<a class='nav-link' href='Logon.php' >Logon</a>
+				</li>";
+			} else {
+				echo "<li class='nav-item'>
+				<a class='nav-link' href='Login.php' >Login</a>
+				</li>";
+			}
+		?>
       </ul>
       <form class="form-inline mt-2 mt-md-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Buscar">
