--- a/site/Towncity-Personagens.html
+++ b/site/Towncity-Personagens.html
@@ -33,6 +33,7 @@
     <link href="RageGames.css" rel="stylesheet">
   </head>
     <header>
+
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <a class="navbar-brand" href="Street-Rua-SITE.html">Street Rua</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,23 +42,31 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="Street-Rua-SITE.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="../site/Street-Rua-SITE.html">Home <span class="sr-only">(current)</span></a>
         </li>
 		<li class="nav-item dropdown">
 		  <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Towncity</a>
 		  <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="Towncity-História.html">História</a>
-            <a class="dropdown-item" href="Towncity-Personagens.html">Personagens</a>
-            <a class="dropdown-item" href="Towncity-Futuro.html">Futuro</a>
+            <a class="dropdown-item" href="../site/Towncity-História.html">História</a>
+            <a class="dropdown-item" href="../site/Towncity-Personagens.html">Personagens</a>
+            <a class="dropdown-item" href="../site/Towncity-Futuro.html">Futuro</a>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../php/formulario-street-rua.php" >Beta</a>
+          <a class="nav-link" href="formulario-street-rua.php" >Beta</a>
         </li>
 		<li class="nav-item">
-          <a class="nav-link" href="../php/Login.php" >Login</a>
-        </li>
+		<?php
+			session_start();
+			if(isset($_SESSION["codigo"])== true){
+				echo "<a class='nav-link' href='Logon.php'> Logon </a>";
+			} else {
+				echo "<a class='nav-link' href='Login.php'> Login </a>";
+			}
+		?>
+		</li>
       </ul>
+	  
       <form class="form-inline mt-2 mt-md-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Buscar">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
@@ -72,6 +81,9 @@
 
     <div class="row featurette">
       <div class="col-md-7">
+	  	<?php 
+		echo session_id();
+	?>
         <h2 class="featurette-heading">Marvin <span class="text-muted" >- O Pastor</span></h2>
         <p class="lead">Cresceu em família conservadora e extremamente religiosa e desde sempre sonhou em ser pastor. Acha que as mudanças climáticas são castigos de Deus devido às ações da humanidade e seu descaso com o meio ambiente, construindo cada vez mais fábricas que poluem os ares, esgotos que poluem os rios e mares e o crescimento desenfreado, fazendo com que seja preciso diminuir o número de florestas para comportar o número de pessoas na Terra. Acha que os culpados são aqueles que não seguem sua doutrina e quer purificá-los! </p>
       </div>
